samples/_failures_safe/1761073280_1a2b61_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f55cdc5c.c: In function ‘main’:
./samples/SAFE/__tmp_f55cdc5c.c:179:13: error: expected declaration or statement at end of input
  179 |             printf("Event processing failed\n");
      |             ^~~~~~
./samples/SAFE/__tmp_f55cdc5c.c:179:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f55cdc5c.c:179:13: error: expected declaration or statement at end of input
